--- a/style.css
+++ b/style.css
@@ -587,22 +587,24 @@ html {
   }
   }
 
-  /* Responsive adjustments for smaller screens */
 @media (max-width: 600px) {
   th, td {
-    display: block; /* Stacks the th and td elements vertically */
-    width: 100%; /* Each cell takes the full width */
+    display: block;
+    width: 100%; 
+    height: 100%;
   }
-
+.table-container{
+  height: 20vh;
+}
   th {
     position: sticky;
-    top: 0; /* Keeps the header visible at the top as you scroll through the table on mobile */
-    z-index: 2; /* Ensures the header is above other content */
+    top: 0;
+    z-index: 2; 
   }
 
   td::before {
-    content: attr(data-title); /* Uses data-title attribute to add a label before each cell's content in mobile view */
-    font-weight: bold; /* Makes the label bold */
-    display: block; /* Ensures the label is on its own line */
+    content: attr(data-title);
+    font-weight: bold; 
+    display: block;
   }
 }
