Updated table container

--- a/style.css
+++ b/style.css
@@ -11,15 +11,11 @@ html, body {
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-}
-body {
+  min-height: 100%;
   margin: 0;
   padding: 0;
   background-color: #F2E3D5;
   color: #012E40;
-  display:flex;
-  flex-direction: column;
   font-family: 'Lato', sans-serif;
 }
 header ,h1, h2,h3 {
@@ -27,7 +23,7 @@ header ,h1, h2,h3 {
 }
 
 /* HEADER */
-h1 {
+  h1 {
   padding: 10px;
   margin-top: 50px; 
   margin-left:5vh;
@@ -593,9 +589,9 @@ html {
     width: 100%; 
     height: 100%;
   }
-.table-container{
+  .table-container{
   height: 20vh;
-}
+  }
   th {
     position: sticky;
     top: 0;
